--- a/AsistenciaApp/Views/LoginPage.xaml
+++ b/AsistenciaApp/Views/LoginPage.xaml
@@ -23,12 +23,21 @@
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Grid>
-        <StackPanel x:Name="CompactPanel" Spacing="16">
-            <TextBox PlaceholderText="Usuario" Text="{Binding Username, Mode=TwoWay}" />
-            <PasswordBox Password="{Binding Password, Mode=TwoWay}" />
+        <TextBlock Text="Iniciar sesión" 
+               FontSize="30" 
+               FontWeight="Bold" 
+               HorizontalAlignment="Center" 
+               VerticalAlignment="Top" 
+               Margin="0,100,0,0"/>
+        
+        <StackPanel x:Name="CompactPanel" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <TextBox PlaceholderText="Usuario" Width="200" Text="{Binding Username, Mode=TwoWay}" />
+            <PasswordBox Password="{Binding Password, Mode=TwoWay}" Width="200" Margin="0,10,0,0"/>
             <TextBlock Text="{Binding ErrorMessage}" Foreground="Red" />
-            <Button Content="Iniciar Sesión" Command="{Binding LoginCommand}" />
-            <Button Content="Restablecer Contraseña" />
+            <Button Content="Iniciar Sesión" Command="{Binding LoginCommand}" Width="200" Margin="0,20,0,0"/>
+            <Button Content="Restablecer Contraseña" Width="200" Margin="0,20,0,0"/>
         </StackPanel>
     </Grid>
+    
+    
 </Page>
