--- a/AsistenciaApp/Views/AgregarAsistenciaPage.xaml
+++ b/AsistenciaApp/Views/AgregarAsistenciaPage.xaml
@@ -1,11 +1,12 @@
-<?xml version="1.0" encoding="utf-8"?>
 <Page
     x:Class="AsistenciaApp.Views.AgregarAsistenciaPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:AsistenciaApp.Views"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:viewModels="using:AsistenciaApp.ViewModels" xmlns:models="using:AsistenciaApp.Core.Models" 
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:viewModels="using:AsistenciaApp.ViewModels"
+    xmlns:models="using:AsistenciaApp.Core.Models" 
     xmlns:converters="using:AsistenciaApp.Converters"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
@@ -14,63 +15,72 @@
         <converters:DateToStringConverter x:Key="DateToStringConverter" />
     </Page.Resources>
 
-    <StackPanel Padding="20" Spacing="15" x:Name="EstudiantePanel">
-        <TextBlock Text="Agregar Asistencia" Style="{StaticResource HeaderTextBlockStyle}" />
+    <Grid Padding="20">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="2*"/>
+        </Grid.ColumnDefinitions>
 
-        <DatePicker x:Name="FechaAsistenciaPicker" 
-            Date="{Binding FechaActual, Mode=TwoWay}"  />
+        <StackPanel Grid.Column="0" Spacing="15">
+            <TextBlock Text="Ingresar Asistencia" Style="{StaticResource HeaderTextBlockStyle}" />
 
-        <TextBox x:Name="CedulaTextBox" PlaceholderText="Ingrese su cédula:" HorizontalAlignment="Left" Width="300"/>
+            <DatePicker
+                x:Name="FechaAsistenciaPicker"
+                Date="{Binding FechaActual, Mode=TwoWay}"
+                IsEnabled="False">
+            </DatePicker>
 
-        <Button Content="Registrar Asistencia"
-                Click="RegistrarAsistenciaButton_Click" />
+            <TextBox x:Name="CedulaTextBox" PlaceholderText="Ingrese su cédula:" HorizontalAlignment="Left" Width="300"/>
 
-        <StackPanel x:Name="EstudianteDetallesPanel" Visibility="Collapsed">
-            <TextBlock x:Name="NombreTextBlock" Text="Nombre: " />
-            <TextBlock x:Name="SeccionTextBlock" Text="Sección: " />
+            <Button Content="Registrar Asistencia"
+                    Click="RegistrarAsistenciaButton_Click" />
+
+            <StackPanel x:Name="EstudianteDetallesPanel" Visibility="Collapsed">
+                <TextBlock x:Name="NombreTextBlock" Text="Nombre: " />
+                <TextBlock x:Name="SeccionTextBlock" Text="Sección: " />
+            </StackPanel>
         </StackPanel>
 
-        <ListView x:Name="AsistenciasListView"
-                  Header="Asistencias Registradas" 
-                  ItemsSource="{Binding Asistencias}">
-            <ListView.ItemTemplate>
-                <DataTemplate x:DataType="models:Registro_Asistencia">
-                    <Grid>
-                        <!-- Menú contextual con opción para eliminar -->
-                        <Grid.ContextFlyout>
-                            <MenuFlyout>
-                                <MenuFlyoutItem Text="Eliminar" Click="EliminarAsistenciaMenuFlyoutItem_Click"/>
-                            </MenuFlyout>
-                        </Grid.ContextFlyout>
+        <ScrollViewer Grid.Column="1" VerticalScrollBarVisibility="Auto">
+            <ListView x:Name="AsistenciasListView"
+                      Header="Asistencias Registradas" 
+                      ItemsSource="{Binding Asistencias}">
+                <ListView.ItemTemplate>
+                    <DataTemplate x:DataType="models:Registro_Asistencia">
+                        <Grid>
+                            <Grid.ContextFlyout>
+                                <MenuFlyout>
+                                    <MenuFlyoutItem Text="Eliminar" Click="EliminarAsistenciaMenuFlyoutItem_Click"/>
+                                </MenuFlyout>
+                            </Grid.ContextFlyout>
 
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto"/>
-                            <RowDefinition Height="Auto"/>
-                            <RowDefinition Height="Auto"/>
-                        </Grid.RowDefinitions>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="Auto"/>
-                            <ColumnDefinition Width="*"/>
-                        </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="Auto"/>
+                            </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
 
-                        <!-- Icono de asistencia -->
-                        <Ellipse Grid.RowSpan="3" Width="32" Height="32" Margin="6" 
-                                 VerticalAlignment="Center" HorizontalAlignment="Center" 
-                                 Fill="{ThemeResource ControlStrongFillColorDefaultBrush}"/>
+                            <Ellipse Grid.RowSpan="3" Width="32" Height="32" Margin="6" 
+                                     VerticalAlignment="Center" HorizontalAlignment="Center" 
+                                     Fill="{ThemeResource ControlStrongFillColorDefaultBrush}"/>
 
-                        <!-- Detalles de la asistencia -->
-                        <TextBlock Grid.Column="1" Grid.Row="0"
-                                   Text="{Binding Fecha, Converter={StaticResource DateToStringConverter}}"
-                                   Style="{ThemeResource BaseTextBlockStyle}" Margin="12,6,0,0"/>
-                        <TextBlock Grid.Column="1" Grid.Row="1"
-                                   Text="{Binding NombreEstudiante}"
-                                   Style="{ThemeResource BodyTextBlockStyle}" Margin="12,0,0,6"/>
-                        <TextBlock Grid.Column="1" Grid.Row="2"
-                                   Text="{Binding Hora_Entrada}"
-                                   Style="{ThemeResource BodyTextBlockStyle}" Margin="12,0,0,6"/>
-                    </Grid>
-                </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
-    </StackPanel>
+                            <TextBlock Grid.Column="1" Grid.Row="0"
+                                       Text="{Binding Fecha, Converter={StaticResource DateToStringConverter}}"
+                                       Style="{ThemeResource BaseTextBlockStyle}" Margin="12,6,0,0"/>
+                            <TextBlock Grid.Column="1" Grid.Row="1"
+                                       Text="{Binding NombreEstudiante}"
+                                       Style="{ThemeResource BodyTextBlockStyle}" Margin="12,0,0,6"/>
+                            <TextBlock Grid.Column="1" Grid.Row="2"
+                                       Text="{Binding Hora_Entrada}"
+                                       Style="{ThemeResource BodyTextBlockStyle}" Margin="12,0,0,6"/>
+                        </Grid>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+        </ScrollViewer>
+    </Grid>
 </Page>
