--- a/AsistenciaApp/Views/AsistenciaPage.xaml
+++ b/AsistenciaApp/Views/AsistenciaPage.xaml
@@ -25,7 +25,7 @@
         x:Name="CalendarView"
         RelativePanel.Below="Header"
         RelativePanel.AlignLeftWithPanel="True"
-        Margin="0,16,0,0"
+        Margin="0,36,36,0"
         Height="400"
         Width="400"
         Language="es"
@@ -33,45 +33,45 @@
         SelectedDatesChanged="CalendarView_SelectedDatesChanged" />
 
         <ListView
-        x:Name="AsistenciaListView"
-        RelativePanel.RightOf="CalendarView"
-        RelativePanel.AlignTopWith="CalendarView"
-        RelativePanel.AlignBottomWith="CalendarView"
-        Margin="16,0,0,0"
-        Width="600"
-        ItemsSource="{x:Bind ViewModel.FilteredEntries, Mode=OneWay}">
-            <ListView.Header>
-                
-                <Grid Background="DimGray">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="2*" />
-                        <ColumnDefinition Width="3*" />
-                        <ColumnDefinition Width="2*" />
-                    </Grid.ColumnDefinitions>
-                    <TextBlock Grid.Column="0" Text="Fecha" FontWeight="Bold" Foreground="White"  Margin="10,5" />
-                    <TextBlock Grid.Column="1" Text="Nombre del estudiante" FontWeight="Bold" Foreground="White"  Margin="10,5" />
-                    <TextBlock Grid.Column="2" Text="Hora de entrada" FontWeight="Bold" Foreground="White"  Margin="10,5" />
-                </Grid>
-            </ListView.Header>
-            <ListView.ItemTemplate>
-                <DataTemplate x:DataType="models:Registro_Asistencia">
-                    <Grid ColumnDefinitions="2*,3*,2*">
-                        <TextBlock
-                        Grid.Column="0"
-                        Text="{x:Bind Fecha, Converter={StaticResource DateToStringConverter}}"
-                        Margin="10,5" />
-                        <TextBlock
-                        Grid.Column="1"
-                        Text="{x:Bind NombreEstudiante}"
-                        Margin="10,5" />
-                        <TextBlock
-                        Grid.Column="2"
-                        Text="{x:Bind Hora_Entrada}"
-                        Margin="10,5" />
+            Width="700"
+            ItemsSource="{x:Bind ViewModel.FilteredEntries, Mode=OneWay}"
+            Margin="150,36,36,0"
+            RelativePanel.RightOf="CalendarView"
+            RelativePanel.AlignTopWith="CalendarView"
+            RelativePanel.AlignBottomWith="CalendarView">
+                <ListView.Header>
+                    <Grid Background="{ThemeResource LayerFillColorAltBrush}">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="2*" />
+                            <ColumnDefinition Width="3*" />
+                            <ColumnDefinition Width="2*" />
+                        </Grid.ColumnDefinitions>
+                        <TextBlock Grid.Column="0" Text="Fecha" Foreground="{ThemeResource TextFillColorPrimaryBrush}" Margin="10,5" />
+                        <TextBlock Grid.Column="1" Text="Nombre del estudiante" Foreground="{ThemeResource TextFillColorPrimaryBrush}"  Margin="10,5" />
+                        <TextBlock Grid.Column="2" Text="Hora de entrada" Foreground="{ThemeResource TextFillColorPrimaryBrush}" Margin="10,5" />
                     </Grid>
-                </DataTemplate>
-            </ListView.ItemTemplate>
+
+                </ListView.Header>
+                <ListView.ItemTemplate>
+                    <DataTemplate x:DataType="models:Registro_Asistencia">
+                        <Grid ColumnDefinitions="2*,3*,2*">
+                            <TextBlock
+                                Grid.Column="0"
+                                Text="{x:Bind Fecha, Converter={StaticResource DateToStringConverter}}"
+                                Margin="10,5" />
+                            <TextBlock
+                                Grid.Column="1"
+                                Text="{x:Bind NombreEstudiante}"
+                                Margin="10,5" />
+                            <TextBlock
+                                Grid.Column="2"
+                                Text="{x:Bind Hora_Entrada}"
+                                Margin="10,5" />
+                        </Grid>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
         </ListView>
+
     </RelativePanel>
 
 </Page>
