--- a/AsistenciaApp/Views/LoginPage.xaml
+++ b/AsistenciaApp/Views/LoginPage.xaml
@@ -24,19 +24,29 @@
 
     <Grid>
         <TextBlock Text="Iniciar sesión" 
-               FontSize="30" 
-               FontWeight="Bold" 
+               FontSize="36" 
+               FontWeight="SemiBold" 
                HorizontalAlignment="Center" 
                VerticalAlignment="Top" 
-               Margin="0,100,0,0"/>
-        
-        <StackPanel x:Name="CompactPanel" HorizontalAlignment="Center" VerticalAlignment="Center">
-            <TextBox PlaceholderText="Usuario" Width="200" Text="{Binding Username, Mode=TwoWay}" />
-            <PasswordBox Password="{Binding Password, Mode=TwoWay}" Width="200" Margin="0,10,0,0"/>
-            <TextBlock Text="{Binding ErrorMessage}" Foreground="Red" />
-            <Button Content="Iniciar Sesión" Command="{Binding LoginCommand}" Width="200" Margin="0,20,0,0"/>
-            <Button Content="Restablecer Contraseña" Width="200" Margin="0,20,0,0"/>
-        </StackPanel>
+               Margin="0,150,0,0"/>
+
+        <Border Background="{ThemeResource CardBackgroundFillColorDefaultBrush}" 
+            CornerRadius="20"
+            Padding="20"
+            Width="350"
+                Height="350"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center"
+            Opacity="0.9">
+
+            <StackPanel x:Name="CompactPanel" HorizontalAlignment="Center" VerticalAlignment="Center">
+                <TextBox PlaceholderText="Usuario" Width="200" Text="{Binding Username, Mode=TwoWay}" />
+                <PasswordBox Password="{Binding Password, Mode=TwoWay}" Width="200" Margin="0,10,0,0"/>
+                <TextBlock Text="{Binding ErrorMessage}" Foreground="Red" />
+                <Button Content="Iniciar Sesión" Command="{Binding LoginCommand}" Width="200" Margin="0,20,0,0"/>
+                <Button Content="Restablecer Contraseña" Width="200" Margin="0,20,0,0"/>
+            </StackPanel>
+        </Border>
     </Grid>
     
     
