--- a/AsistenciaApp/Views/AgregarAsistenciaPage.xaml
+++ b/AsistenciaApp/Views/AgregarAsistenciaPage.xaml
@@ -6,7 +6,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:viewModels="using:AsistenciaApp.ViewModels"
-    xmlns:models="using:AsistenciaApp.Core.Models" 
+    xmlns:models="using:AsistenciaApp.Core.Models"
     xmlns:converters="using:AsistenciaApp.Converters"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
@@ -16,94 +16,163 @@
     </Page.Resources>
 
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="1*"/>
-            <ColumnDefinition Width="2*"/>
-        </Grid.ColumnDefinitions>
+        <VisualStateManager.VisualStateGroups>
+            <VisualStateGroup>
+                <!-- Pantallas pequeñas (Menos de 640px) -->
+                <VisualState x:Name="Narrow">
+                    <VisualState.StateTriggers>
+                        <AdaptiveTrigger MinWindowWidth="0"/>
+                    </VisualState.StateTriggers>
+                    <VisualState.Setters>
+                        <Setter Target="MainGrid.ColumnDefinitions[0].Width" Value="*" />
+                        <Setter Target="MainGrid.ColumnDefinitions[1].Width" Value="0" />
+                    </VisualState.Setters>
+                </VisualState>
 
-        <StackPanel Grid.Column="0">
-            <TextBlock Text="Ingresar Asistencia" Style="{StaticResource HeaderTextBlockStyle}" Margin="36,32,0,24"/>
+                <!-- Pantallas medianas (Más de 640px) -->
+                <VisualState x:Name="Wide">
+                    <VisualState.StateTriggers>
+                        <AdaptiveTrigger MinWindowWidth="641"/>
+                    </VisualState.StateTriggers>
+                    <VisualState.Setters>
+                        <Setter Target="MainGrid.ColumnDefinitions[0].Width" Value="1.2*" />
+                        <Setter Target="MainGrid.ColumnDefinitions[1].Width" Value="2*" />
+                    </VisualState.Setters>
+                </VisualState>
+            </VisualStateGroup>
+        </VisualStateManager.VisualStateGroups>
 
-            <Border Background="{ThemeResource CardBackgroundFillColorDefaultBrush}" 
-                    CornerRadius="20"
-                    Padding="20"
-                    Width="400"
-                    Height="250"
-                    HorizontalAlignment="Left"
-                    VerticalAlignment="Center"
-                    Opacity="0.9">
-                <StackPanel>
-                    <DatePicker x:Name="FechaAsistenciaPicker"
-                                Date="{Binding FechaActual, Mode=TwoWay}"
-                                IsEnabled="False"
-                                Margin="36,20,0,16">
-                    </DatePicker>
+        <Grid x:Name="MainGrid">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="1*"/>
+                <!-- Formulario -->
+                <ColumnDefinition Width="2*"/>
+                <!-- Lista -->
+            </Grid.ColumnDefinitions>
 
-                    <TextBox x:Name="CedulaTextBox" PlaceholderText="Ingrese su cédula:" HorizontalAlignment="Left" Width="300"
-                             Margin="36,20,0,0"/>
+            <!-- FORMULARIO -->
+            <StackPanel Grid.Column="0"
+                        HorizontalAlignment="Stretch"
+                        VerticalAlignment="Stretch"
+                        MinWidth="250"
+                        MaxWidth="500"
+                        Margin="12">
 
-                    <Button Content="Registrar Asistencia"
-                            Click="RegistrarAsistenciaButton_Click"
-                            Margin="36,40,0,0"/>
-                </StackPanel>
-            </Border>
-        </StackPanel>
+                <TextBlock Text="Ingresar Asistencia"
+                           Style="{StaticResource HeaderTextBlockStyle}"
+                           Margin="36,32,0,24"/>
 
-        <Grid Grid.Column="1">
-            <ScrollViewer Grid.Column="1" VerticalScrollBarVisibility="Auto">
-                <ListView x:Name="AsistenciasListView"
-                      Header="{Binding HeaderText}" 
-                      ItemsSource="{Binding Asistencias}">
-                    
-                    <ListView.HeaderTemplate>
-                        <DataTemplate>
-                            <TextBlock Text="{Binding}" FontSize="14" Margin="10" Style="{StaticResource SubtitleTextBlockStyle}"/>
-                        </DataTemplate>
-                    </ListView.HeaderTemplate>
+                <Border Background="{ThemeResource CardBackgroundFillColorDefaultBrush}"
+                        CornerRadius="20"
+                        Padding="20"
+                        MinWidth="250"
+                        MaxWidth="400"
+                        HorizontalAlignment="Stretch"
+                        VerticalAlignment="Center"
+                        Opacity="0.9">
 
-                    <ListView.ItemsPanel>
-                        <ItemsPanelTemplate>
-                            <ItemsWrapGrid Orientation="Horizontal" MaximumRowsOrColumns="3"/>
-                        </ItemsPanelTemplate>
-                    </ListView.ItemsPanel>
+                    <StackPanel>
+                        <DatePicker x:Name="FechaAsistenciaPicker"
+                                    Date="{Binding FechaActual, Mode=TwoWay}"
+                                    IsEnabled="False"
+                                    Margin="36,20,0,16"/>
 
-                    <ListView.ItemTemplate>
-                        <DataTemplate x:DataType="models:Registro_Asistencia">
-                            <Grid>
-                                <Grid.ContextFlyout>
-                                    <MenuFlyout>
-                                        <MenuFlyoutItem Text="Eliminar" Click="EliminarAsistenciaMenuFlyoutItem_Click"/>
-                                    </MenuFlyout>
-                                </Grid.ContextFlyout>
+                        <TextBox x:Name="CedulaTextBox"
+                                 PlaceholderText="Ingrese su cédula:"
+                                 HorizontalAlignment="Stretch"
+                                 Margin="36,20,36,0"/>
 
-                                <Grid.RowDefinitions>
-                                    <RowDefinition Height="Auto"/>
-                                    <RowDefinition Height="Auto"/>
-                                    <RowDefinition Height="Auto"/>
-                                </Grid.RowDefinitions>
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="Auto"/>
-                                    <ColumnDefinition Width="*"/>
-                                </Grid.ColumnDefinitions>
+                        <Button Content="Registrar Asistencia"
+                                Click="RegistrarAsistenciaButton_Click"
+                                Margin="36,40,36,0"/>
+                    </StackPanel>
+                </Border>
+            </StackPanel>
 
-                                <Ellipse Grid.RowSpan="3" Width="32" Height="32" Margin="6" 
-                                     VerticalAlignment="Center" HorizontalAlignment="Center" 
-                                     Fill="{ThemeResource ControlStrongFillColorDefaultBrush}"/>
+            <!-- LISTA DE ASISTENCIA -->
+            <Grid Grid.Column="1"
+                  HorizontalAlignment="Stretch">
 
-                                <TextBlock Grid.Column="1" Grid.Row="0"
-                                       Text="{Binding Fecha, Converter={StaticResource DateToStringConverter}}"
-                                       Style="{ThemeResource BodyTextBlockStyle}" Margin="12,6,0,0"/>
-                                <TextBlock Grid.Column="1" Grid.Row="1"
-                                       Text="{Binding NombreEstudiante}"
-                                       Style="{ThemeResource BodyTextBlockStyle}" Margin="12,6,0,6"/>
-                                <TextBlock Grid.Column="1" Grid.Row="2"
-                                       Text="{Binding Hora_Entrada}"
-                                       Style="{ThemeResource BodyTextBlockStyle}" Margin="12,0,0,6"/>
-                            </Grid>
-                        </DataTemplate>
-                    </ListView.ItemTemplate>
-                </ListView>
-            </ScrollViewer>
+                <ScrollViewer VerticalScrollBarVisibility="Auto"
+                              Margin="0,100,0,110">
+
+                    <ListView x:Name="AsistenciasListView"
+                              Header="{Binding HeaderText}"
+                              ItemsSource="{Binding Asistencias}"
+                              Width="Auto"
+                              HorizontalAlignment="Stretch">
+
+                        <ListView.HeaderTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding}"
+                                           FontSize="14"
+                                           Margin="10"
+                                           Style="{StaticResource SubtitleTextBlockStyle}"/>
+                            </DataTemplate>
+                        </ListView.HeaderTemplate>
+
+                        <ListView.ItemsPanel>
+                            <ItemsPanelTemplate>
+                                <ItemsWrapGrid Orientation="Horizontal" MaximumRowsOrColumns="4"
+               ItemWidth="250" ItemHeight="100"/>
+
+                            </ItemsPanelTemplate>
+                        </ListView.ItemsPanel>
+
+                        <ListView.ItemTemplate>
+                            <DataTemplate x:DataType="models:Registro_Asistencia">
+                                <Grid MinWidth="100" Width="Auto">
+                                    <Grid.ContextFlyout>
+                                        <MenuFlyout>
+                                            <MenuFlyoutItem Text="Eliminar"
+                                                            Click="EliminarAsistenciaMenuFlyoutItem_Click"/>
+                                        </MenuFlyout>
+                                    </Grid.ContextFlyout>
+
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="Auto"/>
+                                        <RowDefinition Height="Auto"/>
+                                        <RowDefinition Height="Auto"/>
+                                    </Grid.RowDefinitions>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="Auto"/>
+                                        <ColumnDefinition Width="*"/>
+                                    </Grid.ColumnDefinitions>
+
+                                    <Ellipse Grid.RowSpan="3"
+                                             Width="32"
+                                             Height="32"
+                                             Margin="6"
+                                             VerticalAlignment="Center"
+                                             HorizontalAlignment="Center"
+                                             Fill="{ThemeResource ControlStrongFillColorDefaultBrush}"/>
+
+                                    <TextBlock Grid.Column="1"
+                                               Grid.Row="0"
+                                               Text="{Binding Fecha, Converter={StaticResource DateToStringConverter}}"
+                                               Style="{ThemeResource BodyTextBlockStyle}"
+                                               Margin="12,6,0,0"/>
+
+                                    <TextBlock Grid.Column="1"
+                                               Grid.Row="1"
+                                               Text="{Binding NombreEstudiante}"
+                                               Style="{ThemeResource BodyTextBlockStyle}"
+                                               Margin="12,6,0,6"
+                                               TextWrapping="Wrap"
+                                               MaxWidth="180"/>
+
+                                    <TextBlock Grid.Column="1"
+                                               Grid.Row="2"
+                                               Text="{Binding Hora_Entrada}"
+                                               Style="{ThemeResource BodyTextBlockStyle}"
+                                               Margin="12,0,0,6"
+                                               HorizontalAlignment="Left"/>
+                                </Grid>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
+                </ScrollViewer>
+            </Grid>
         </Grid>
     </Grid>
 </Page>
