--- a/AsistenciaApp/Views/ShellPage.xaml
+++ b/AsistenciaApp/Views/ShellPage.xaml
@@ -14,10 +14,12 @@
             <RowDefinition Height="48" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
+        
         <Grid Grid.Row="0" x:Name="AppTitleBar">
             <Image Source="/Assets/WindowIcon.ico" HorizontalAlignment="Left" Width="16" Height="16" Margin="8,0"/>
             <TextBlock x:Name="AppTitleBarText" VerticalAlignment="Center" TextWrapping="NoWrap" Style="{StaticResource CaptionTextBlockStyle}" Margin="32, 0, 0, 0"/>
         </Grid>
+        
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
@@ -30,6 +32,11 @@
                 -->
                 <MenuBarItem x:Uid="ShellMenuBarItem_File">
                     <MenuFlyoutItem x:Uid="ShellMenuItem_Views_Main" Command="{x:Bind ViewModel.MenuViewsMainCommand}"/>
+                    
+                    <MenuFlyoutItem x:Uid="ShellMenuItem_Views_ImportExcel"
+                      Text="Importar"
+                      Command="{x:Bind ViewModel.ImportExcelCommand}" />
+
                     <MenuFlyoutItem x:Uid="ShellMenuItem_File_Exit" Command="{x:Bind ViewModel.MenuFileExitCommand}" />
                 </MenuBarItem>
 
@@ -63,5 +70,9 @@
         <Grid Grid.Row="2" Margin="{StaticResource MenuBarContentMargin}">
             <Frame x:Name="NavigationFrame" />
         </Grid>
+
+        <ContentDialog x:Name="GlobalDialog" Title="Importación" PrimaryButtonText="Aceptar">
+            <TextBlock x:Name="MessageTextBlock"/>
+        </ContentDialog>
     </Grid>
 </Page>
